# mtgscan-app

./: Makefile  docker-compose.yml
server/: Dockerfile  app.py  pyproject.toml
server/static/: index.js
server/templates/: index.html
