[project]
name = "mtgscan-app"
version = "0.1.0"
description = ""
authors = [{name = "qfortier", email= "qpfortier@gmail.com"},]
requires-python = "3.10.5"

dependencies = [
    "mtgscan @ git+https://github.com/Qvdpost/mtgscan",
    "eventlet (>=0.33.3)",
    "celery (>=5.2.0)",
    "Flask (>=2.1.0)",
    "Flask-SocketIO (>=5.2.0)",
    "redis (>=4.3.4)",
]

[tool.poetry]
package-mode = false


[build-system]
requires = ["poetry-core>=2.1.3"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "pytorch_cpu"}
torchvision = {source = "pytorch_cpu"}

